src/css/app.scss
@font-face {
    font-family: Streamster;
    font-weight: normal;
    font-style: normal;
    src: url('../assets/fonts/Streamster.woff2') format('woff2');
    font-display: swap;
}

body {
    font-family: 'Courier New', sans-serif;
}

img {
    display: block;
}

.container {
    max-width: 60.9375rem;
    margin: 0 auto;
}

.fade-enter-active,
.fade-leave-active {
    transition: opacity 0.15s ease;
}

.fade-enter-from,
.fade-leave-to {
    opacity: 0;
}

.q-field__bottom--animated {
    position: static;
    padding-bottom: 1rem;
    transform: translateY(0%);
}

.q-field--with-bottom {
    padding-bottom: 0;
}

.small-screen-only {
    @media (width <= $breakpoint-xs-max) {
        display: block;
    }

    @media (min-width: $breakpoint-sm-min) {
        display: none;
    }
}

.large-screen-only {
    @media (width <= $breakpoint-xs-max) {
        display: none;
    }

    @media (min-width: $breakpoint-sm-min) {
        display: block;
    }
}

@media (prefers-reduced-motion: reduce) {
    *,
    ::before,
    ::after {
        animation-duration: 0.01ms !important;
        animation-iteration-count: 1 !important;
        transition-duration: 0.01ms !important;
        scroll-behavior: auto !important;
    }
}

